crates/backyard-lexer/tests/snapshots/keywords__endwhile_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
expression: tokens
snapshot_kind: text
---
- token_type: EndWhile
  value:
    - 101
    - 110
    - 100
    - 119
    - 104
    - 105
    - 108
    - 101
  line: 1
  column: 0
  offset: 0
