crates/backyard-lexer/tests/snapshots/keywords__enum_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
assertion_line: 121
expression: tokens
snapshot_kind: text
---
- token_type: Enum
  value: enum
  line: 1
  column: 0
  offset: 0
