crates/backyard-lexer/tests/snapshots/keywords__eval_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
assertion_line: 131
expression: tokens
snapshot_kind: text
---
- token_type: Eval
  value: eval
  line: 1
  column: 0
  offset: 0
