crates/backyard-lexer/tests/snapshots/keywords__exit_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
expression: tokens
snapshot_kind: text
---
- token_type: Exit
  value:
    - 101
    - 120
    - 105
    - 116
  line: 1
  column: 0
  offset: 0
