crates/backyard-lexer/tests/snapshots/keywords__extends_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
expression: tokens
snapshot_kind: text
---
- token_type: Extends
  value:
    - 101
    - 120
    - 116
    - 101
    - 110
    - 100
    - 115
  line: 1
  column: 0
  offset: 0
