crates/backyard-lexer/tests/snapshots/keywords__false_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
assertion_line: 146
expression: tokens
snapshot_kind: text
---
- token_type: "False"
  value: "false"
  line: 1
  column: 0
  offset: 0
