crates/backyard-lexer/tests/snapshots/keywords__final_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
assertion_line: 151
expression: tokens
snapshot_kind: text
---
- token_type: Final
  value: final
  line: 1
  column: 0
  offset: 0
