crates/backyard-lexer/tests/snapshots/keywords__finally_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
expression: tokens
snapshot_kind: text
---
- token_type: Finally
  value:
    - 102
    - 105
    - 110
    - 97
    - 108
    - 108
    - 121
  line: 1
  column: 0
  offset: 0
