crates/backyard-lexer/tests/snapshots/keywords__fn_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
expression: tokens
snapshot_kind: text
---
- token_type: Fn
  value:
    - 102
    - 110
  line: 1
  column: 0
  offset: 0
