crates/backyard-lexer/tests/snapshots/keywords__for_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
expression: tokens
snapshot_kind: text
---
- token_type: For
  value:
    - 102
    - 111
    - 114
  line: 1
  column: 0
  offset: 0
