crates/backyard-lexer/tests/snapshots/keywords__foreach_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
expression: tokens
snapshot_kind: text
---
- token_type: Foreach
  value:
    - 102
    - 111
    - 114
    - 101
    - 97
    - 99
    - 104
  line: 1
  column: 0
  offset: 0
