crates/backyard-lexer/tests/snapshots/keywords__from_test.snap
---
source: crates/backyard-lexer/tests/keywords.rs
assertion_line: 176
expression: tokens
snapshot_kind: text
---
- token_type: From
  value: from
  line: 1
  column: 0
  offset: 0
